# rLotos

./: .gitignore  README.md
data/PalaCell2D/app/: CMakeLists.txt  palaCell.cpp
results/experiment1.1/new_palacell_out_0.0001_0.95/: data_to_save_at_epoch_55.npy  data_to_save_at_epoch_60.npy
results/experiment1.1/new_palacell_out_0.0001_0.99/: data_to_save_at_epoch_60.npy
results/experiment1.1/new_palacell_out_0.001_0.95/: data_to_save_at_epoch_70.npy
results/experiment1.1/new_palacell_out_0.001_0.99/: data_to_save_at_epoch_70.npy
results/experiment1.1/new_palacell_out_1e-05_0.99/: data_to_save_at_epoch_30.npy  data_to_save_at_epoch_35.npy  data_to_save_at_epoch_70.npy
results/experiment1.2/new_palacell_out_iters_100_0.0001_0.99/: data_to_save_at_epoch_70.npy
results/experiment1.2/new_palacell_out_iters_100_0.0001_0.99/testing/: data_to_save_at_epoch_99(best).npy
results/experiment1.2/new_palacell_out_iters_10_0.0001_0.99/: data_to_save_at_epoch_50.npy
results/experiment1.2/new_palacell_out_iters_200_0.0001_0.99/: data_to_save_at_epoch_70.npy
results/experiment1.2/new_palacell_out_iters_200_0.0001_0.99/testing/: data_to_save_at_epoch_99(best).npy
results/experiment1.2/new_palacell_out_iters_20_0.0001_0.99/: data_to_save_at_epoch_70.npy
results/experiment1.2/new_palacell_out_iters_20_0.0001_0.99/testing/: data_to_save_at_epoch_71(best).npy  data_to_save_at_epoch_72(best).npy  data_to_save_at_epoch_73(best).npy  data_to_save_at_epoch_74(best).npy  data_to_save_at_epoch_75(best).npy  data_to_save_at_epoch_76(best).npy  data_to_save_at_epoch_77(best).npy  data_to_save_at_epoch_78(best).npy  data_to_save_at_epoch_79(best).npy  data_to_save_at_epoch_80(best).npy  data_to_save_at_epoch_81(best).npy  (+49 more)
results/experiment1.2/new_palacell_out_iters_40_0.0001_0.99/: data_to_save_at_epoch_50.npy  data_to_save_at_epoch_70.npy
results/experiment1.2/new_palacell_out_iters_50_0.0001_0.99/: data_to_save_at_epoch_70.npy
results/experiment1.2/new_palacell_out_iters_60_0.0001_0.99/: data_to_save_at_epoch_70.npy
results/experiment2/new_palacell_out_circles_0.0001_0.95/: data_to_save_at_epoch_40.npy
results/experiment2/new_palacell_out_circles_0.0001_0.99/: data_to_save_at_epoch_130.npy  data_to_save_at_epoch_40.npy
results/experiment2/new_palacell_out_circles_0.001_0.95/: data_to_save_at_epoch_60.npy
results/experiment2/new_palacell_out_circles_1e-05_0.95/: data_to_save_at_epoch_140.npy  data_to_save_at_epoch_20.npy
results/experiment2/new_palacell_out_circles_1e-05_0.99/: data_to_save_at_epoch_140.npy  data_to_save_at_epoch_45.npy
results/experiment2_iters/new_palacell_out_circles_iters100_0.0001_0.95/: data_to_save_at_epoch_70.npy
results/experiment2_iters/new_palacell_out_circles_iters50_0.0001_0.95/: data_to_save_at_epoch_70.npy
results/experiment3/new_palacell_out_100.0/: fitness_track.csv  output.csv  timesLog.csv
results/experiment3/new_palacell_out_20.0/: fitness_track.csv  output.csv  timesLog.csv
results/experiment3/new_palacell_out_200.0/: fitness_track.csv  output.csv  timesLog.csv
results/experiment3/new_palacell_out_50.0/: fitness_track.csv  output.csv  timesLog.csv
results_20231122/experiment3/new_palacell_out_20_2/: 9_generation_ga_instance.pkl
source/: EnvironmentBlueprint.py  generate_plots.py  rLotos.def
source/experiment1/: generate_plots.py  model.py  read_output.py  read_output_iters.py  train.py  train_manager.py  train_manager_iters.py
source/experiment2/: generate_plots.py  palacellProlifTrain.py  read_output.py  train.py  train_manager.py  train_manager_iters.py
source/experiment2/env/: PalacellEnv.py  checks.py
source/experiment3/: evolve.py  evolve_manager.py  read_ga_output.py
source/experiment3/env/: PalacellEnv.py  vtkInterface.py
source/experiment4/: evolve.py  evolve_manager.py
source/experiment4/env/: PalacellEnv.py  vtkInterface.py
(+2 files in other folders)
